# data_migration_services

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/: alembic.ini  app.py  cli.py  config.py  config_dev.toml  config_local.toml  main.py
src/alembic/: env.py
src/alembic/versions/: 02125f5148f4_create_chatbot_user_and_permission_table.py  0c4ffc204eea_add_length_to_string_columns_in_user_.py
src/apps/: chatbot_project.py  chatbot_user.py  project.py  user.py
src/models/: chatbot.py  chatbot_auth.py  connection.py  database.py  enum.py  migration.py  models.py  user.py  表结构分析.md
src/scripts/: assist_abc.py  authorize_user_chatbot.py
src/service/: assist_abc.py
src/service/chatbot_user/: create_user.py  get_users.py
src/tests/: crud.py  test_aysnc_db.py  test_db.py
src/utils/: logger.py  response.py
src/utils/consts/: codes.py
