[tool.poetry]
name = "supplier_data_migration_tool"
version = "0.1.0"
description = "供应商数据迁移工具"
authors = ["waseemw@wicresoft.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pymysql = "^1.1.1"
sqlalchemy = "^2.0.30"
pyjwt = "^2.8.0"
toml = "^0.10.2"
uvicorn = "^0.30.1"
fastapi = {extras = ["all"], version = "^0.111.0"}
loguru = "^0.7.2"
alembic = "^1.13.1"
pandas = "^2.2.2"
cryptography = "^42.0.8"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
